2011-04-08  Xavier Perseguers  <xavier@causal.ch>

	* [DOCUMENTATION] Update constant editor screenshot to reflect change of constant name
	* [DOCUMENTATION] Fixed typo in cache configuration
	* [BUGFIX] #25846: Version wizard fails to save configuration on TYPO3 4.4

2011-03-23  Xavier Perseguers  <xavier@causal.ch>

	* Raised version to 1.1.0
	* Task #13767: Complete German translation

2011-03-11  Xavier Perseguers  <xavier@causal.ch>

	* Added feature #13769: Many blocks have no more HTML when imported with the module

2011-03-10  Xavier Perseguers  <xavier@causal.ch>

	* Raised version to 1.0.0 (stable)
	* Added PDF version of the documentation
	* Allowed HTML in blocks fee and remarks
	* Fixed exception when using LIST mode (feature #13710)
	* Integrated suggestion #13731: Documentation corrections
	* Added exception handling when unsupported language is used
	* Updated step-by-step tutorial in documentation
	* Added CSS classes to standard templates

2011-03-09  Xavier Perseguers  <xavier@causal.ch>

	* Added feature #13710: Allow a service or a list of services to be specified by TypoScript
	* Updated screenshots in documentation

2011-03-08  Xavier Perseguers  <xavier@causal.ch>

	* Added DIVs and classes to templates
	* Fixed minor glitches in the documentation when rendered as HTML on TER

2011-03-07  Xavier Perseguers  <xavier@causal.ch>

	* Raised version to 0.9.0
	* Added fallback for web service parameter eCHmunicipalityID
	* Updated documentation with inclusion of static template

2011-03-02  Xavier Perseguers  <xavier@causal.ch>

	* Refactored Helper classes to be part of Utility namespace
	* Renamed eCHmunicipalityID into organizationID

2011-02-25  Xavier Perseguers  <xavier@causal.ch>

	* Updated documentation

2011-02-24  Xavier Perseguers  <xavier@causal.ch>

	* Raised version to 0.8.0 (first release to TER)
	* Added class on h1 in list mode
	* Updated documentation with information about RealURL autoconfiguration